--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.2.0",
+		"@netlify/functions": "^1.2.0",
 		"daisyui": "^2.27.0"
 	}
 }
