--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vo-ce--",
 	"version": "0.0.1",
-	"private": "true",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
